fix(Slider): fix handle style issue on mobile devices (#4244)
* fix(Slider): fix handle style issue on mobile devices

* Update docs/pages/components/slider/fragments/custom.md


* docs(slider): update custom slider handle example

---------

--- a/src/Slider/styles/index.less
+++ b/src/Slider/styles/index.less
@@ -185,6 +185,8 @@
   ol,
   li {
     list-style: none;
+    margin: 0;
+    padding: 0;
   }
 
   > ol {
